--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LED CUBE viewer</title>
+    <link href="./src/css/styles.css" rel="stylesheet">
 </head>
-
-
-
 <style>
     body {margin: 0;}
     canvas { display: block; /* fixes scrollbar issue */}
