--- a/index.html
+++ b/index.html
@@ -6,13 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LED CUBE viewer</title>
     <link href="./src/css/styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
-<style>
-    body {margin: 0;}
-    canvas { display: block; /* fixes scrollbar issue */}
-</style>
-
-<body>
-    <script src="./src/main.js" type="module"></script>
+<script src="./src/js/sidebar/sidebar.js"></script>
+<body class="block overflow-hidden">
+<div >
+    <div class="absolute z-10 text-primary-blue-light top-2 left-2">
+        <div class="p-2.5 mt-1 flex items-center" onclick="openSidebar()">
+            <i class="bi bi-box-fill px-2 py-1 rounded-md bg-blue-600 text-4xl"></i>
+        </div>
+        <div class="sidebar fixed top-0 bottom-0 lg:left-0 p-2 w-[300px] overflow-y-auto text-center bg-primary-blue-darker hidden">
+            <div class="text-gray-100 text-xl">
+                <div class="p-2.5 mt-1 flex items-center" onclick="openSidebar()">
+                    <i class="bi bi-box-fill px-2 py-1 rounded-md bg-blue-600 text-4xl"></i>
+                    <h1 class="font-bold text-gray-200 text-2xl ml-3">CUBE</h1>
+                </div>
+                <div class="my-2 bg-gray-600 h-[1px]"></div>
+            </div>
+            <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white">
+                <i class="bi bi-pencil-square text-xl font-bold"></i>
+                <span class="ml-4 text-gray-200 font-semibold text-lg">Edit</span>
+            </div>
+            <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white">
+                <i class="bi bi-boxes text-xl"></i>
+                <span class="ml-4 text-gray-200 font-semibold text-lg">Animate</span>
+            </div>
+            <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white">
+                <i class="bi bi-box-arrow-in-left text-xl"></i>
+                <span class="ml-4 text-gray-200 font-semibold text-lg">Import</span>
+            </div>
+            <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white">
+                <i class="bi bi-box-arrow-right text-xl"></i>
+                <span class="ml-4 text-gray-200 font-semibold text-lg">Export</span>
+            </div>
+        </div>
+    </div>
+    <div id="simulation" class="w-10"></div>
+</div>
+<script src="./src/main.js" type="module"></script>
 </body>
 </html>
