--- a/src/pages/create.html
+++ b/src/pages/create.html
@@ -53,9 +53,8 @@
         <div id="heading" class="flex justify-center mt-5">
             <h1 class="text-primary-white text-2xl">Editor</h1>
         </div>
-            <div class="h-[85vh] mt-3 shadow-lg flex">
-            <div class="h-full w-[95%] bg-primary-gray-mid overflow-y-auto" id="row-section">
-            </div>
+        <div class="h-[85vh] mt-3 shadow-lg flex">
+            <div class="h-full w-[95%] bg-primary-gray-mid overflow-y-auto" id="row-section"></div>
             <div id="tools" class="w-10 h-full ml-2 bg-primary-gray-light flex justify-center">
                 <div class="text-primary-gray-dark font-bold text-2xl cursor-pointer" onclick="addNewRow()">+</div>
             </div>
