--- a/src/pages/create.html
+++ b/src/pages/create.html
@@ -70,7 +70,12 @@
                 <div class="flex justify-center w-full h-full">
                     <input type="color" id="color-picker" name="color-picker" class="items-center w-12 h-12" value="#0000ff">
                 </div>
-
+                <div class="flex justify-center">
+                    <label for="timeout-picker" class="text-primary-white text-xl font-semibold">Select timeout ( 1- 10000 ms)</label>
+                </div>
+                <div class="flex justify-center w-full h-full">
+                    <input type="number" id="timeout-picker" name="timeout-picker" class="items-center" value="250" min="1" max="10000">
+                </div>
             </div>
         </div>
 
