--- a/src/pages/create.html
+++ b/src/pages/create.html
@@ -37,11 +37,11 @@
                     <i class="bi bi-boxes text-xl"></i>
                     <a class="ml-4 text-gray-200 font-semibold text-lg" href="#">Animate</a>
                 </div>
-                <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white">
+                <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white", id="btn_import">
                     <i class="bi bi-box-arrow-in-left text-xl"></i>
                     <a class="ml-4 text-gray-200 font-semibold text-lg" href="#">Import</a>
                 </div>
-                <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white">
+                <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white", id="btn_export">
                     <i class="bi bi-box-arrow-right text-xl"></i>
                     <a class="ml-4 text-gray-200 font-semibold text-lg" href="#">Export</a>
                 </div>
