added anim. import/export

--- a/src/pages/create.html
+++ b/src/pages/create.html
@@ -37,11 +37,11 @@
                     <i class="bi bi-boxes text-xl"></i>
                     <a class="ml-4 text-gray-200 font-semibold text-lg" href="#">Animate</a>
                 </div>
-                <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white", id="btn_import">
+                <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white">
                     <i class="bi bi-box-arrow-in-left text-xl"></i>
                     <a class="ml-4 text-gray-200 font-semibold text-lg" href="#">Import</a>
                 </div>
-                <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white", id="btn_export">
+                <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white">
                     <i class="bi bi-box-arrow-right text-xl"></i>
                     <a class="ml-4 text-gray-200 font-semibold text-lg" href="#">Export</a>
                 </div>
@@ -59,6 +59,9 @@
                 <i class="bi bi-arrow-down-left-square-fill text-primary-gray-dark font-bold text-2xl cursor-pointer" title="Open simulation popup" id="open-popup"></i>
                 <i class="bi bi-play-fill text-primary-gray-dark font-bold text-2xl cursor-pointer" title="Start simulation" id="simulate-action"></i>
                 <i class="bi bi-square-fill text-primary-gray-dark font-bold text-2xl cursor-pointer" title="End simulation" id="stop-simulation"></i>
+                <i class="bi bi-file-arrow-down-fill text-primary-gray-dark font-bold text-2xl cursor-pointer" title="Export animatiom" id="export_anim"></i>
+                <label for="lcaf_upload" class="bi bi-file-arrow-up-fill text-primary-gray-dark font-bold text-2xl cursor-pointer" title="Import animation" id="import_anim"></label>
+                <input id="lcaf_upload" type="file" accept=".lcaf" style="display:none;">
             </div>
         </div>
 
