--- a/src/pages/create.html
+++ b/src/pages/create.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 <script src="../js/sidebar/sidebar.js"></script>
-<script src="../js/editor/addNewRow.js"></script>
+<!-- <script src="../js/editor/addNewRow.js"></script> -->
 <body class="block overflow-hidden bg-primary-black">
 <div class="grid grid-cols-5 gap-4">
     <div class="col-span-1">
@@ -55,7 +55,7 @@
         <div class="h-[85vh] mt-3 shadow-lg flex">
             <div class="h-full w-[95%] bg-primary-gray-mid overflow-y-auto" id="row-section"></div>
             <div id="tools" class="w-10 h-full ml-2 bg-primary-gray-light p-2">
-                <i class="bi bi-plus text-primary-gray-dark font-bold text-2xl cursor-pointer" title="Add new row" onclick="addNewRow()"></i>
+                <i class="bi bi-plus text-primary-gray-dark font-bold text-2xl cursor-pointer" title="Add new row" id="btn_addNewRow"></i>
                 <i class="bi bi-arrow-down-left-square-fill text-primary-gray-dark font-bold text-2xl cursor-pointer" title="Open simulation popup" id="open-popup"></i>
                 <i class="bi bi-play-fill text-primary-gray-dark font-bold text-2xl cursor-pointer" title="Start simulation" id="simulate-action"></i>
                 <i class="bi bi-square-fill text-primary-gray-dark font-bold text-2xl cursor-pointer" title="End simulation" id="stop-simulation"></i>
@@ -89,7 +89,6 @@
     <div id="simulation"></div>
 
 </div>
-<!--<script src="./src/main.js" type="module"></script>-->
 <script src="../js/editor/simulate.js" type="module"></script>
 </body>
 </html>
