--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white">
                 <i class="bi bi-pencil-square text-xl font-bold"></i>
-                <a class="ml-4 text-gray-200 font-semibold text-lg" href="./src/pages/create.html">Edit</a>
+                <a class="ml-4 text-gray-200 font-semibold text-lg" href="/edit">Edit</a>
             </div>
             </div>
         </div>
