feature/addFrameRestrictions - added restrictions for frames and hid the timeout section

--- a/src/pages/create.html
+++ b/src/pages/create.html
@@ -79,10 +79,10 @@
                         <option>#555555</option>
                     </datalist>
                 </div>
-                <div class="flex justify-center">
+                <div class="flex justify-center hidden">
                     <label for="timeout-picker" class="text-primary-white text-xl font-semibold">Select timeout ( 1- 10000 ms)</label>
                 </div>
-                <div class="flex justify-center w-full h-full">
+                <div class="flex justify-center w-full h-full hidden">
                     <input type="number" id="timeout-picker" name="timeout-picker" class="items-center" value="250" min="1" max="10000">
                 </div>
             </div>
