Fixed orentiation, etc...

--- a/src/pages/create.html
+++ b/src/pages/create.html
@@ -61,7 +61,7 @@
                 <div class="flex justify-center w-full h-full">
                     <input type="color" id="color-picker" name="color-picker" class="items-center w-12 h-12" value="#FF0000" list="color-options" readonly>
                     <datalist id="color-options">
-                        <option>#000000</option>
+                        <option>#FFFFFF</option> <!--Add small eresaer icon here somehow..-->
                         <option>#0000FF</option>
                         <option>#00FF00</option>
                         <option>#00FFFF</option>
@@ -83,7 +83,7 @@
                     <label for="timeout-picker" class="text-primary-white text-xl font-semibold">Select timeout ( 1- 10000 ms)</label>
                 </div>
                 <div class="flex justify-center w-full h-full hidden">
-                    <input type="number" id="timeout-picker" name="timeout-picker" class="items-center" value="250" min="1" max="10000">
+                    <input type="number" id="timeout-picker" name="timeout-picker" class="items-center" value="200" min="1" max="10000">
                 </div>
             </div>
         </div>
