feature/animate-frame - added single frame animations to the editor

--- a/src/pages/create.html
+++ b/src/pages/create.html
@@ -85,6 +85,9 @@
                 <div class="flex justify-center w-full h-full hidden">
                     <input type="number" id="timeout-picker" name="timeout-picker" class="items-center" value="200" min="1" max="10000">
                 </div>
+                <div id="frame-simulation-section" class="flex justify-center mt-40">
+                    <div id="frame-simulation"></div>
+                </div>
             </div>
         </div>
     </div>
