--- a/src/pages/create.html
+++ b/src/pages/create.html
@@ -67,6 +67,7 @@
             <div class="h-full w-[95%] bg-primary-gray-mid overflow-y-auto" id="row-section"></div>
             <div id="tools" class="w-10 h-full ml-2 bg-primary-gray-light p-2">
                 <i class="bi bi-plus text-primary-gray-dark font-bold text-2xl cursor-pointer" title="Add new row" id="btn_addNewRow"></i>
+                <i class="bi bi-2-circle-fill text-primary-gray-dark font-bold text-2xl cursor-pointer" title="Duplicate last row", id="btn_dupl_last_row"></i>
                 <i class="bi bi-arrow-down-left-square-fill text-primary-gray-dark font-bold text-2xl cursor-pointer" title="Open simulation popup" id="open-popup"></i>
                 <i class="bi bi-play-fill text-primary-gray-dark font-bold text-2xl cursor-pointer" title="Start simulation" id="simulate-action"></i>
                 <i class="bi bi-square-fill text-primary-gray-dark font-bold text-2xl cursor-pointer" title="End simulation" id="stop-simulation"></i>
